# cosmic-ext-applet-ollama

./: Cargo.toml  README.md  justfile
.devcontainer/: Containerfile  devcontainer.json
data/: dev.heppen.ollama.desktop  io.github.elevenhsoft.CosmicAppletOllama.desktop  io.github.elevenhsoft.CosmicExtAppletOllama.desktop
i18n/bg/: cosmic_ext_applet_ollama.ftl
i18n/cs/: cosmic_ext_applet_ollama.ftl
i18n/en/: cosmic_applet_ollama.ftl  cosmic_ext_applet_ollama.ftl
i18n/nl/: cosmic_ext_applet_ollama.ftl
i18n/pl/: cosmic_applet_ollama.ftl  cosmic_ext_applet_ollama.ftl
i18n/sv/: cosmic_ext_applet_ollama.ftl
i18n/zh-CN/: cosmic_ext_applet_ollama.ftl
src/: api.rs  chat.rs  lib.rs  main.rs  markdown.rs  models.rs  request.rs  stream.rs  window.rs
