[package]
name = "cosmic-ext-applet-ollama"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1
overflow-checks = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.12", features = ["json", "blocking", "stream"] }
tokio = { version = "1", features = ["full"] }
i18n-embed = { version = "0.15", features = [
  "fluent-system",
  "desktop-requester",
] }
i18n-embed-fl = "0.9"
anyhow = "1.0"
rust-embed = "8.5.0"
once_cell = "1.20"
async-stream = "0.3"
futures = "0.3"
bytes = "1.9"
ron = "0.8"
dirs = "6.0"
chrono = "0.4"
ashpd = { version = "0.10", features = ["wayland"] }
base64 = "0.22"
open = "5.3"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = ["applet", "markdown", "tokio", "wayland", "winit"]

[features]
default = ["wgpu"]
wgpu = ["libcosmic/wgpu"]
