[package]
name = "cosmic-ext-applet-ollama"
version = "0.1.1"
edition = "2024"

[profile.release]
opt-level = 3
panic = "abort"
lto = "thin"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.23", features = ["json", "blocking", "stream"] }
tokio = { version = "1", features = ["full"] }
i18n-embed = { version = "0.16", features = [
  "fluent-system",
  "desktop-requester",
] }
i18n-embed-fl = "0.10"
anyhow = "1.0"
rust-embed = "8.7"
once_cell = "1.21"
async-stream = "0.3"
futures = "0.3"
bytes = "1.10"
ron = "0.11"
dirs = "6.0"
chrono = "0.4"
ashpd = { version = "0.12", features = ["wayland"] }
base64 = "0.22"
open = "5.3"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = ["applet", "markdown", "highlighter", "tokio", "wayland", "winit"]

[features]
default = ["wgpu"]
wgpu = ["libcosmic/wgpu"]
